# exochain-v2

crates/exo-consent/: Cargo.toml
crates/exo-consent/src/: bailment.rs  lib.rs
crates/exo-core/: Cargo.toml
crates/exo-core/src/: crypto.rs  hlc.rs  lib.rs
crates/exo-dag/: Cargo.toml
crates/exo-dag/src/: mmr.rs  store.rs
crates/exo-identity/src/: did.rs
