[package]
name = "exo-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_cbor.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
thiserror.workspace = true
bs58.workspace = true
hex.workspace = true

[dev-dependencies]
proptest.workspace = true
rand.workspace = true
