[package]
name = "exo-dag"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
exo-core.workspace = true
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
tokio.workspace = true
proptest.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }
rand.workspace = true

[[bench]]
name = "append_normative"
harness = false
